--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@naerth/commander-autocompletion",
   "version": "0.0.1",
   "module": "./src/index.ts",
+  "main": "./src/index.ts",
   "type": "module",
   "description": "Small utility that add autocompletion for commander",
   "keywords": [
@@ -18,6 +19,7 @@
   },
   "license": "MIT",
   "exports": {
+    "types": "./src/index.ts",
     "import": "./src/index.ts",
     "require": "./src/index.ts"
   },
