--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@naerth/commander-autocomplete",
   "version": "0.0.3",
-  "module": "./src/index.ts",
-  "main": "./src/index.ts",
+  "module": "./dist/esm/index.js",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
   "type": "module",
   "description": "Small utility that add autocomplete for commander",
   "keywords": [
@@ -20,24 +21,25 @@
   },
   "license": "MIT",
   "exports": {
-    "types": "./src/index.ts",
-    "import": "./src/index.ts",
-    "require": "./src/index.ts"
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/esm/index.js"
+    }
   },
   "files": [
-    "./src/**/*",
+    "./dist/**/*",
     "./tsconfig.json"
   ],
   "scripts": {
     "yarn": "bun install --yarn",
-    "build": "bun run build:esm && bun run build:cjs",
-    "build:esm": "bun run build:node:esm && bun run build:bun:esm",
-    "build:cjs": "bun run build:node:cjs && bun run build:bun:cjs",
-    "build:node:esm": "bun build --format esm --target=node ./src/index.ts --outfile=./dist/esm/node/autocomplete.js",
-    "build:bun:esm": "bun build --format esm --target=bun ./src/index.ts --outfile=./dist/esm/bun/autocomplete.js",
-    "build:node:cjs": "exit;bun build --format cjs --target=node ./src/index.ts --outfile=./dist/cjs/node/autocomplete.js",
-    "build:bun:cjs": "exit;bun build --format cjs --target=bun ./src/index.ts --outfile=./dist/cjs/bun/autocomplete.js",
-    "postbuild": "tsc -p ./tsconfig.build.json",
+    "clear:dist": "rm -rf ./dist",
+    "build": "bun run clear:dist && bun run build:esm && bun run build:cjs",
+    "build:cjs": "tsc -p ./tsconfig.build.cjs.json",
+    "postbuild:cjs": "bun ./scripts/add-cjs-package-json.ts",
+    "build:esm": "tsc -p ./tsconfig.build.esm.json",
+    "compile": "tsc -b ./tsconfig.build.cjs.json ./tsconfig.build.esm.json ./tsconfig.build.types.json",
     "publish": "npm publish --access public"
   },
   "devDependencies": {
