--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "clear:dist": "rm -rf ./dist",
     "build": "bun run clear:dist && bun run compile",
     "compile": "tsc -b ./tsconfig.build.cjs.json ./tsconfig.build.esm.json ./tsconfig.build.types.json",
-    "postbuild:cjs": "bun ./scripts/add-cjs-package-json.ts",
-    "publish": "npm publish --access public"
+    "postbuild": "bun ./scripts/add-cjs-package-json.ts",
+    "publish": "npm publish --access public",
+    "test": "bun test && bun run test:cjs",
+    "test:cjs": "jest"
   },
   "devDependencies": {
     "bun-types": "latest",
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "jest": "^29.7.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
