--- a/tsconfig.build.types.json
+++ b/tsconfig.build.types.json
@@ -4,5 +4,8 @@
     "outDir": "./dist/types",
     "declaration": true,
     "emitDeclarationOnly": true
-  }
+  },
+  "exclude": [
+    "./test/**/*"
+  ]
 }
