--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "postbuild": "tsc -p ./tsconfig.build.types.json",
     "prepublish": "bun run test",
     "publish": "npm publish --access public",
-    "test": "bun test --coverage",
-    "posttest": "bun run build"
+    "test": "bun test --coverage"
   },
   "devDependencies": {
     "commander": "^11.0.0",
@@ -57,6 +56,6 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@types/bun": "^1.1.3"
+    "@types/bun": "^1.1.13"
   }
 }
