chore: update package version and file paths for improved structure

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@naerth/commander-autocomplete",
-  "version": "0.0.10-rc",
-  "module": "./dist/esm/index.js",
-  "main": "./dist/cjs/index.js",
-  "types": "./dist/types/index.d.ts",
+  "version": "0.0.11",
+  "main": "./node/index.js",
+  "module": "./node/index.js",
+  "types": "./types/index.d.ts",
   "type": "module",
   "description": "Small utility that add autocomplete for commander",
   "keywords": [
@@ -21,22 +21,16 @@
   },
   "license": "MIT",
   "exports": {
-    "./dev.js": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts",
-      "require": "./src/index.ts",
-      "default": "./src/index.ts"
-    },
     ".": {
-      "types": "./dist/types/index.d.ts",
-      "default": "./dist/node/commander-autocomplete.js",
-      "import": "./dist/node/commander-autocomplete.js",
-      "bun": "./dist/bun/commander-autocomplete.js",
-      "node": "./dist/node/commander-autocomplete.js"
+      "types": "./types/index.d.ts",
+      "default": "./node/commander-autocomplete.js",
+      "import": "./node/commander-autocomplete.js",
+      "bun": "./bun/commander-autocomplete.js",
+      "node": "./node/commander-autocomplete.js"
     }
   },
   "files": [
-    "./dist/**/*",
+    "./**/*",
     "./tsconfig.json"
   ],
   "scripts": {
