fix: update publish scripts to include 'cd dist' for correct publishing path

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "postbuild": "tsc -p ./tsconfig.build.types.json",
     "prepub": "bun run test && bun run build",
     "prepub:rc": "bun run prepub",
-    "pub": "npm publish --access public",
-    "pub:rc": "npm publish --access public --tag next",
+    "pub": "cd dist && npm publish --access public --tag latest",
+    "pub:rc": "cd dist && npm publish --access public --tag next",
     "test": "jest"
   },
   "devDependencies": {
