--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naerth/commander-autocomplete",
-  "version": "0.0.13",
+  "version": "1.0.0",
   "main": "./dist/node/index.js",
   "module": "./dist/node/index.js",
   "types": "./dist/types/index.d.ts",
@@ -45,19 +45,17 @@
     "pub": "npm publish --access public --tag latest",
     "pub:rc": "npm publish --access public --tag next",
     "test": "jest",
-    "posttest" : "bun ./scripts/generate-coverage-badge.ts"
+    "posttest": "bun ./scripts/generate-coverage-badge.ts"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^30.1.3",
     "ts-node": "^10.9.2",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.2",
+    "@types/bun": "^1.2.22",
+    "@types/jest": "^30.0.0"
   },
   "peerDependencies": {
-    "commander": "^13.1.0",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@types/bun": "^1.2.18",
-    "@types/jest": "^29.5.14"
+    "commander": "^14.0.1",
+    "typescript": "^5.9.2"
   }
 }
